--- a/Association Rules.ipynb
+++ b/Association Rules.ipynb
@@ -18,7 +18,7 @@
     "1. Confidence:  `(Number of times an item + an associated item occured)/ total number of times the item was occured` ----> `T(X AND Y)/T(X)`\r\n",
     "2. Support: `(Number of times an item + an associated item occured)/ total number of times all the events occured`  ---->   `T(X AND Y)/T()`\r\n",
     "\r\n",
-    "These 2 metrices need to be used to make sure that infrequent items are not getting recommended.\r\n"
+    "These 2 metrices need to make sure that infrequent items are not getting recommended.\r\n"
    ],
    "metadata": {}
   },
@@ -69,9 +69,37 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "# To get the counts of each pairs\r\n",
     "def get_itemCominationCounts(itemSet_dictionary):\r\n",
+    "    from itertools import permutations\r\n",
+    "\r\n",
     "    counts_of_pairs = {}\r\n",
-    "    "
+    "    for idx, itemlist in itemSet_dictionary:\r\n",
+    "        for perm in permutations(itemlist, 2):\r\n",
+    "            perm = frozenset(perm)\r\n",
+    "            if perm not in counts_of_pairs:\r\n",
+    "                counts_of_pairs[perm] = 0\r\n",
+    "            counts_of_pairs[perm] += 1\r\n",
+    "    \r\n",
+    "    return counts_of_pairs"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "def calculaet_association_rules(counts_of_items, counts_of_pairs, total_occurances):\r\n",
+    "    asociation_rule_set = []\r\n",
+    "    for item, count in counts_of_items.items():\r\n",
+    "        for pair, pair_count in counts_of_pairs.items():\r\n",
+    "            if(item.issubset(pair)):\r\n",
+    "                associated_item = pair.difference(item)\r\n",
+    "                support_metric = pair_count/total_occurances\r\n",
+    "                confidence_metric = pair_count/count\r\n",
+    "                asociation_rule_set.append((item, associated_item,\\\r\n",
+    "                                    support_metric, confidence_metric))"
    ],
    "outputs": [],
    "metadata": {}
