--- a/Association Rules.ipynb
+++ b/Association Rules.ipynb
@@ -90,7 +90,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "def calculaet_association_rules(counts_of_items, counts_of_pairs, total_occurances):\r\n",
+    "# This function will return the items associated with each other with respecive scores\r\n",
+    "def calculate_association_rules(counts_of_items, counts_of_pairs, total_occurances):\r\n",
     "    asociation_rule_set = []\r\n",
     "    for item, count in counts_of_items.items():\r\n",
     "        for pair, pair_count in counts_of_pairs.items():\r\n",
