--- a/Similarity measures.ipynb
+++ b/Similarity measures.ipynb
@@ -122,10 +122,10 @@
     "    \r\n",
     "    return distance\r\n",
     "\r\n",
-    "rating1 = [0,0,0,0,0]\r\n",
-    "rating2 = [0,0,0,0,0]\r\n",
+    "rating_u1 = [0,0,0,0,0]\r\n",
+    "rating_u2 = [0,0,0,0,0]\r\n",
     "\r\n",
-    "l1_norm_distance(rating1, rating2)"
+    "l1_norm_distance(rating_u1, rating_u2)"
    ],
    "outputs": [
     {
@@ -163,10 +163,10 @@
     "    \r\n",
     "    return squred_sum**0.5\r\n",
     "\r\n",
-    "rating1 = [0,0,0,0,0]\r\n",
-    "rating2 = [5,5,5,5,5]\r\n",
+    "rating_u1 = [0,0,0,0,0]\r\n",
+    "rating_u2 = [5,5,5,5,5]\r\n",
     "\r\n",
-    "l2_norm_distance(rating1, rating2)"
+    "l2_norm_distance(rating_u1, rating_u2)"
    ],
    "outputs": [
     {
@@ -184,16 +184,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 102,
+   "source": [
+    "def cosine_similarity(user_rating1, user_rating2, adjusted = False):\r\n",
+    "    '''\r\n",
+    "    Note that zero related calculations may be wrong.\r\n",
+    "    '''\r\n",
+    "\r\n",
+    "\r\n",
+    "    if(not adjusted):\r\n",
+    "        product = 0\r\n",
+    "        r1_squared = 0\r\n",
+    "        r2_squared = 0\r\n",
+    "\r\n",
+    "        for i in range(len(user_rating1)):\r\n",
+    "            product += user_rating1[i]*user_rating2[i]\r\n",
+    "            r1_squared += user_rating1[i]**2\r\n",
+    "            r2_squared += user_rating2[i]**2\r\n",
+    "\r\n",
+    "        if(product==0):\r\n",
+    "            return 1.0\r\n",
+    "        elif(r1_squared==0 or r2_squared==0):\r\n",
+    "            return 0.0\r\n",
+    "        cosine = product/((r1_squared**0.5)*(r2_squared**0.5))\r\n",
+    "        return cosine\r\n",
+    "\r\n",
+    "    else:\r\n",
+    "        u1_avg = 0\r\n",
+    "        u2_avg = 0\r\n",
+    "\r\n",
+    "        for i in range(len(user_rating1)):\r\n",
+    "            u1_avg += user_rating1[i]\r\n",
+    "            u2_avg += user_rating2[i]\r\n",
+    "        \r\n",
+    "        u1_avg /= len(user_rating1)\r\n",
+    "        u2_avg /= len(user_rating2)\r\n",
+    "\r\n",
+    "        adj_product = 0\r\n",
+    "        adj_r1_squared = 0\r\n",
+    "        adj_r2_squared = 0\r\n",
+    "\r\n",
+    "        for i in range(len(user_rating1)):\r\n",
+    "            adj_product += (user_rating1[i]-u1_avg)*(user_rating2[i]-u2_avg)\r\n",
+    "            adj_r1_squared += (user_rating1[i]-u1_avg)**2\r\n",
+    "            adj_r2_squared += (user_rating2[i]-u2_avg)**2\r\n",
+    "\r\n",
+    "        if(adj_product==0):\r\n",
+    "            return 1.0\r\n",
+    "        elif(adj_r1_squared==0 or adj_r2_squared==0):\r\n",
+    "            return 0.0\r\n",
+    "        cosine = adj_product/((adj_r1_squared**0.5)*(adj_r2_squared**0.5))\r\n",
+    "        return cosine\r\n",
+    "\r\n",
+    "\r\n",
+    "rating_u1 = [1,1,1,1,1]\r\n",
+    "rating_u2 = [1,1,1,1,1]\r\n",
+    "\r\n",
+    "cosine_similarity(rating_u1, rating_u2, adjusted=True)\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.9999999999999998"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 102
+    }
+   ],
    "metadata": {}
   },
   {
