similarity measure impl

--- a/Similarity measures.ipynb
+++ b/Similarity measures.ipynb
@@ -184,13 +184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 24,
    "source": [
     "def cosine_similarity(user_rating1, user_rating2, adjusted = False):\r\n",
     "    '''\r\n",
     "    Note that zero related calculations may be wrong.\r\n",
     "    '''\r\n",
-    "\r\n",
+    "    from math import sqrt\r\n",
     "\r\n",
     "    if(not adjusted):\r\n",
     "        product = 0\r\n",
@@ -210,35 +210,47 @@
     "        return cosine\r\n",
     "\r\n",
     "    else:\r\n",
-    "        u1_avg = 0\r\n",
-    "        u2_avg = 0\r\n",
     "\r\n",
-    "        for i in range(len(user_rating1)):\r\n",
-    "            u1_avg += user_rating1[i]\r\n",
-    "            u2_avg += user_rating2[i]\r\n",
+    "        from math import sqrt\r\n",
+    "\r\n",
+    "        user1_avg = 0\r\n",
+    "        user2_avg = 0\r\n",
+    "        user1_count = 0\r\n",
+    "        user2_count = 0\r\n",
+    "        for i in range(len(user1_ratings)):\r\n",
+    "            if(user1_ratings[i]!=0):\r\n",
+    "                user1_avg += user1_ratings[i]\r\n",
+    "                user1_count += 1\r\n",
+    "            if(user2_ratings[i]!=0):\r\n",
+    "                user2_avg += user2_ratings[i]\r\n",
+    "                user2_count += 1\r\n",
+    "\r\n",
+    "        user1_avg = user1_avg/user1_count\r\n",
+    "        user2_avg = user2_avg/user2_count\r\n",
+    "\r\n",
+    "        normalized_rating1 = [i-user1_avg if (i!=0) else 0 for i in user1_ratings]\r\n",
+    "        normalized_rating2 = [i-user2_avg if (i!=0) else 0 for i in user2_ratings]\r\n",
+    "\r\n",
+    "        diff1Sq = 0\r\n",
+    "        diff2Sq = 0\r\n",
+    "        diffMul = 0\r\n",
     "        \r\n",
-    "        u1_avg /= len(user_rating1)\r\n",
-    "        u2_avg /= len(user_rating2)\r\n",
+    "        # Only difference in Adjusted Cosine and Pearson's similarity is in this part.\r\n",
+    "        # Here we consider all the rated items regardless of whether both users have rated them.\r\n",
+    "        # If one user has not rated an item, rating would be zero.\r\n",
+    "        for i in range(len(user1_ratings)):\r\n",
+    "            u1 = normalized_rating1[i]\r\n",
+    "            u2 = normalized_rating2[i]\r\n",
+    "            diff1Sq += u1**2\r\n",
+    "            diff2Sq += u2**2\r\n",
+    "            diffMul += u1*u2\r\n",
     "\r\n",
-    "        adj_product = 0\r\n",
-    "        adj_r1_squared = 0\r\n",
-    "        adj_r2_squared = 0\r\n",
+    "        cosine = diffMul/(sqrt(diff1Sq)*sqrt(diff2Sq))\r\n",
     "\r\n",
-    "        for i in range(len(user_rating1)):\r\n",
-    "            adj_product += (user_rating1[i]-u1_avg)*(user_rating2[i]-u2_avg)\r\n",
-    "            adj_r1_squared += (user_rating1[i]-u1_avg)**2\r\n",
-    "            adj_r2_squared += (user_rating2[i]-u2_avg)**2\r\n",
-    "\r\n",
-    "        if(adj_product==0):\r\n",
-    "            return 1.0\r\n",
-    "        elif(adj_r1_squared==0 or adj_r2_squared==0):\r\n",
-    "            return 0.0\r\n",
-    "        cosine = adj_product/((adj_r1_squared**0.5)*(adj_r2_squared**0.5))\r\n",
     "        return cosine\r\n",
     "\r\n",
-    "\r\n",
-    "rating_u1 = [1,1,1,1,1]\r\n",
-    "rating_u2 = [1,1,1,1,1]\r\n",
+    "rating_u1 = [4,5,4,0,3,3]\r\n",
+    "rating_u2 = [3,3,3,2,4,5]\r\n",
     "\r\n",
     "cosine_similarity(rating_u1, rating_u2, adjusted=True)\r\n"
    ],
@@ -247,13 +259,113 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.9999999999999998"
+       "0.29981267559834457"
       ]
      },
      "metadata": {},
-     "execution_count": 102
+     "execution_count": 24
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Pearson's correlation coefficient\r\n",
+    "\r\n",
+    "Statistical measure of calculating relationship between 2 variables. Basically can determine how different each variable on average.\r\n",
+    "\r\n",
+    ">eg:- In rating context, if 2 user's ratings are similar correlation coefficient would be 1 while if one likes and other dislikes coefficient would be -1. 0 indicate no relationship at all.\r\n",
+    "<p></p>\r\n",
+    "<center><img src=\"./images/pearson_coefficient.png\"/></center>\r\n",
+    "\r\n",
+    "<p>\r\n",
+    "But in simple terms implementation is as follows.\r\n",
+    "\r\n",
+    "1. Calculate the average rating per user rated items\r\n",
+    "2. Normalize the ratings. (to match different user rating patterns)\r\n",
+    "3. Put the results into the formula to calculate the similarity\r\n",
+    "\r\n",
+    "</p>\r\n",
+    "\r\n",
+    "\r\n",
+    ">### The only difference between the adjusted cosine and Pearson’s correlation is that the Pearson function uses item set both two users have rated, while the cosine similarity function uses all rated items even if only one has rated that, setting the ratings to zero when one of the users doesn’t rated an item."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "source": [
+    "def pearson_similarity(user1_ratings, user2_ratings):\r\n",
+    "    from math import sqrt\r\n",
+    "\r\n",
+    "    user1_avg = 0\r\n",
+    "    user2_avg = 0\r\n",
+    "    user1_count = 0\r\n",
+    "    user2_count = 0\r\n",
+    "    for i in range(len(user1_ratings)):\r\n",
+    "        if(user1_ratings[i]!=0):\r\n",
+    "            user1_avg += user1_ratings[i]\r\n",
+    "            user1_count += 1\r\n",
+    "        if(user2_ratings[i]!=0):\r\n",
+    "            user2_avg += user2_ratings[i]\r\n",
+    "            user2_count += 1\r\n",
+    "\r\n",
+    "    user1_avg = user1_avg/user1_count\r\n",
+    "    user2_avg = user2_avg/user2_count\r\n",
+    "\r\n",
+    "    normalized_rating1 = [i-user1_avg if (i!=0) else 0 for i in user1_ratings]\r\n",
+    "    normalized_rating2 = [i-user2_avg if (i!=0) else 0 for i in user2_ratings]\r\n",
+    "\r\n",
+    "    diff1Sq = 0\r\n",
+    "    diff2Sq = 0\r\n",
+    "    diffMul = 0\r\n",
+    "\r\n",
+    "    # Here we only consider the set which have been rated by the both users.\r\n",
+    "    for i in range(len(user1_ratings)):\r\n",
+    "        if(user1_ratings[i]!=0 and user2_ratings[i]!=0):\r\n",
+    "            u1 = normalized_rating1[i]\r\n",
+    "            u2 = normalized_rating2[i]\r\n",
+    "            diff1Sq += u1**2\r\n",
+    "            diff2Sq += u2**2\r\n",
+    "            diffMul += u1*u2\r\n",
+    "\r\n",
+    "    cosine = diffMul/(sqrt(diff1Sq)*sqrt(diff2Sq))\r\n",
+    "\r\n",
+    "    return cosine\r\n",
+    "\r\n",
+    "rating_u1 = [4,5,4,0,3,3]\r\n",
+    "rating_u2 = [3,3,3,2,4,5]\r\n",
+    "\r\n",
+    "pearson_similarity(rating_u1, rating_u2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "-0.7606388292556647"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 42
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   },
   {
