issue in similarities fixed

--- a/Similarity measures.ipynb
+++ b/Similarity measures.ipynb
@@ -184,9 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "source": [
-    "def cosine_similarity(user_rating1, user_rating2, adjusted = False):\r\n",
+    "def cosine_similarity(user1_ratings, user2_ratings, adjusted = False):\r\n",
     "    '''\r\n",
     "    Note that zero related calculations may be wrong.\r\n",
     "    '''\r\n",
@@ -197,10 +197,10 @@
     "        r1_squared = 0\r\n",
     "        r2_squared = 0\r\n",
     "\r\n",
-    "        for i in range(len(user_rating1)):\r\n",
-    "            product += user_rating1[i]*user_rating2[i]\r\n",
-    "            r1_squared += user_rating1[i]**2\r\n",
-    "            r2_squared += user_rating2[i]**2\r\n",
+    "        for i in range(len(user1_ratings)):\r\n",
+    "            product += user1_ratings[i]*user2_ratings[i]\r\n",
+    "            r1_squared += user1_ratings[i]**2\r\n",
+    "            r2_squared += user2_ratings[i]**2\r\n",
     "\r\n",
     "        if(product==0):\r\n",
     "            return 1.0\r\n",
@@ -228,8 +228,8 @@
     "        user1_avg = user1_avg/user1_count\r\n",
     "        user2_avg = user2_avg/user2_count\r\n",
     "\r\n",
-    "        normalized_rating1 = [i-user1_avg if (i!=0) else 0 for i in user1_ratings]\r\n",
-    "        normalized_rating2 = [i-user2_avg if (i!=0) else 0 for i in user2_ratings]\r\n",
+    "        normalized_rating1 = [abs(i-user1_avg) if (i!=0) else 0 for i in user1_ratings]\r\n",
+    "        normalized_rating2 = [abs(i-user2_avg) if (i!=0) else 0 for i in user2_ratings]\r\n",
     "\r\n",
     "        diff1Sq = 0\r\n",
     "        diff2Sq = 0\r\n",
@@ -259,11 +259,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.29981267559834457"
+       "0.6210590034081187"
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 4
     }
    ],
    "metadata": {}
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "source": [
     "def pearson_similarity(user1_ratings, user2_ratings):\r\n",
     "    from math import sqrt\r\n",
@@ -315,8 +315,8 @@
     "    user1_avg = user1_avg/user1_count\r\n",
     "    user2_avg = user2_avg/user2_count\r\n",
     "\r\n",
-    "    normalized_rating1 = [i-user1_avg if (i!=0) else 0 for i in user1_ratings]\r\n",
-    "    normalized_rating2 = [i-user2_avg if (i!=0) else 0 for i in user2_ratings]\r\n",
+    "    normalized_rating1 = [abs(i-user1_avg) if (i!=0) else 0 for i in user1_ratings]\r\n",
+    "    normalized_rating2 = [abs(i-user2_avg) if (i!=0) else 0 for i in user2_ratings]\r\n",
     "\r\n",
     "    diff1Sq = 0\r\n",
     "    diff2Sq = 0\r\n",
@@ -345,11 +345,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "-0.7606388292556647"
+       "0.7606388292556647"
       ]
      },
      "metadata": {},
-     "execution_count": 42
+     "execution_count": 5
     }
    ],
    "metadata": {}
