collabarative filtering start

--- a/k-means clustering.ipynb
+++ b/k-means clustering.ipynb
@@ -196,10 +196,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Point to Note\r\n",
+    "### Points to Note\r\n",
     "\r\n",
     "- It is important to do proper point initialization. Other wise will cause very bad clustering. There are many techniques available to fix this issue including point initializing in maximum density areas and max distances.\r\n",
-    "- Identifying K value can be done by a method named \"elbow\" basicall run K means for several k values and find the K with minimum distance output."
+    "- Identifying K value can be done by a method named \"elbow\". Basically run K means for several k values and find the K with minimum distance output."
    ],
    "metadata": {}
   },
